# lead_machine

./: .env  .gitignore  cleanup_db.py  lead_machine.db  main.py  plan.txt  pyproject.toml  scratch_test.py  scratch_test2.py  scratch_test3.py  scratch_test4.py  scratch_test5.py
alembic/: env.py
alembic/versions/: 7a6c1a445709_add_contact_linkedin_fields.py
scripts/: seed_niches.py
src/: config.py  database.py  main.py
src/api/: campaigns.py  leads.py
src/dashboard/: routes.py
src/dashboard/static/: style.css
src/dashboard/templates/: base.html  campaigns.html  dashboard.html  lead_detail.html  leads.html
src/models/: __init__.py  campaign.py  contact.py  lead.py  lead_status.py
src/schemas/: campaign.py  lead.py
src/services/: discovery.py  enrichment.py  pipeline.py  qualification.py  scoring.py
src/utils/: enrich_existing.py  rate_limiter.py
