[project]
name = "lead-machine"
version = "0.1.0"
description = "Outbound Lead Machine — Discover businesses without digital presence and feed the sales pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    # HTTP Client
    "httpx>=0.27.0",
    # Configuration
    "pydantic-settings>=2.3.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.22.1",
    # LinkedIn enrichment
    "apify-client>=1.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
